functional version without angular components

--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,11 @@
       <li><a href="#section-11" class="timeline-dot" aria-label="Ir a sección 11"></a></li>
       <li><a href="#section-12" class="timeline-dot" aria-label="Ir a sección 12"></a></li>
       <li><a href="#section-13" class="timeline-dot" aria-label="Ir a sección 13"></a></li>
+      <li><a href="#section-14" class="timeline-dot" aria-label="Ir a sección 14"></a></li>
     </ul>
 
     <!-- Bottom Element: Total Page Count -->
-    <div class="nav-total-sections">13</div>
+    <div class="nav-total-sections">14</div>
   </nav>
 
 
@@ -125,6 +126,45 @@
       <div class="section-content">
         <h1 class="section-title">In one sentence</h1>
         <p class="section-subtitle">YOU HAVE FOLLOWED OUR FIRST PILL</p>
+      </div>
+    </section>
+
+    <!-- Section 14: Bento Grid -->
+    <section id="section-14" class="section section-14">
+      <div class="section-content full-width">
+        <h3 class="section-mini-title">Concept Definition</h3>
+
+        <div class="bento-container">
+          <!-- CARD 1: What this is -->
+          <div class="card expanded">
+            <div class="vertical-title">What this is</div>
+            <div class="card-content">
+              <h2>What this is</h2>
+              <ul class="bento-list">
+                <li>a way for the less techie and quantitative to gain judgement and keep up with tech and AI advances;
+                </li>
+                <li>a continuous system that evolves with you, a companion for the rest of your career;</li>
+                <li>a traceable portfolio of skills, risks, and options over time;</li>
+                <li>a way to navigate change gradually, deliberately, and intelligently; and</li>
+                <li>in the limit, for those that qualify, a technology partner as co-investor for certain members of the
+                  community that feel the need to become entrepreneurs.</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- CARD 2: What this is not -->
+          <div class="card collapsed">
+            <div class="vertical-title">What this is not</div>
+            <div class="card-content">
+              <h2>What this is not</h2>
+              <ul class="bento-list">
+                <li>a single course;</li>
+                <li>a one-off coaching interaction; nor</li>
+                <li>a reskilling panic button.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
