--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@700&family=Inter:wght@300;400&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@700&family=Indie+Flower&family=Inter:wght@300;400&family=Montserrat:wght@100;200;300;400;700&family=Sacramento&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
 </head>
 
