--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="SciTheWorld">
-  <title>SciTheWorld</title>
+  <meta name="description" content="Corporate strategy in a world of AI">
+  <title>41OPS</title>
 
   <!-- Google Fonts - Bebas Neue (Bold Sans-Serif Grotesca) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +13,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@700&family=Indie+Flower&family=Inter:wght@300;400&family=Montserrat:wght@100;200;300;400;700&family=Sacramento&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
+  <link rel="icon" type="image/png" href="img/logo_stw.png">
+
 </head>
 
 <body>
