--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Corporate strategy in a world of AI">
-  <title>41OPS</title>
+  <title>Learning~Adaptive</title>
 
   <!-- Google Fonts - Bebas Neue (Bold Sans-Serif Grotesca) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
